# warp-cookiecutter

{{cookiecutter.project_slug}}/: Cargo.toml  lib.rs  main.rs
{{cookiecutter.project_slug}}/scripts/: init-server.sh
{{cookiecutter.project_slug}}/src/: main.rs
{{cookiecutter.project_slug}}/src/webapp/: mod.rs  server.rs
{{cookiecutter.project_slug}}/tests/routes/: index.rs
{{cookiecutter.project_slug}}/webapp/: routes.rs  server.rs
