[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.3"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.13"
serde_json = "1.0.68"
tower = "0.4.8"
